[metadata]
name = importall
description = Imports all importable files in a package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/importall/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = importall
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
  importall = importall.main:main

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = importall/*
omit = importall/tests/*

[coverage:report]
# this can't be 100 without pragmas
fail_under = 95
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{36,37,38}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
